# definitely-not-jarvis

./: LICENSE  Makefile  README.md
content/: package-lock.json  package.json
content/config/: database.ts  server.ts
content/src/api/faq/content-types/faq/: schema.json
content/src/api/knowledge/content-types/knowledge/: schema.json
content/src/api/project/content-types/project/: schema.json
server/: .env.example  blocks.py  clarifai.py  main.py  prompt.py  pyproject.toml  strapi.py
server/classification/: classification.py  classification_with_parser.py
